<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculadoraActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_calculadora"
        android:textAlignment="center"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/edN1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_numero"
        android:inputType="number"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/edN2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_numero"
        android:inputType="number"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mas"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menos"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dividir" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp" />

</LinearLayout>