<resources>
    <string name="app_name">My Application</string>
    <string name="btn_ok">Login</string>
    <string name="tv_welcome">Bienvenida</string>
    <string name="title_calculadora">Calculadora</string>
    <string name="hint_numero">Ingrese un número</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="btn_dividir">/</string>
    <string name="n2_eq_zero_error">El número 2 no puede ser 0</string>
</resources>
