<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:text="@string/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="30sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/edUsuario" android:textSize="30sp"
            android:hint="@string/ingrese_su_usuario" android:importantForAutofill="no" android:inputType="text"/>
    <TextView
            android:text="@string/contrase_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="30sp"/>
    <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/edPassword" android:textSize="30sp"
            android:hint="@string/ingrese_su_contrase_a" android:importantForAutofill="no"/>
    <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnLogin" android:textSize="30sp"

    />
    <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>
    <!--android:onClick="doLogin"-->
</LinearLayout>