<resources>
    <string name="app_name">practico03-android-layout</string>
    <string name="btn_hello">OK</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="login">Login</string>
    <string name="contrase_a">Contraseña</string>
    <string name="resultado">Resultado</string>
    <string name="hint_n1">N1:</string>
    <string name="hint_n2">N2:</string>
</resources>
